# colony

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: account-claims-task-claim-account.md  add-colony-spec-package.md  ant-coordination-health.md  attention-inbox-format-flag.md  auto-claim-hook-wiring-diagnostics.md  auto-release-stale-plan-subtask-claims.md  batched-ingest-pipeline.md  begin-immediate-claim-lifecycle.md  bind-subtask-to-spec-row.md  biome-housekeeping.md  bridge-lifecycle-daemon-fastpath.md  bridge-lifecycle-error-ux.md  bridge-lifecycle-replay-and-dry-run.md  bridge-replay-subcommand.md  claim-before-edit.md  claude-edit-read-guard.md  cluster-observations-mcp-tool.md  cocoindex-session-token-source.md  codex-gpu-embedding-provider.md  colony-bridge-native-client.md  colony-demo-command-and-policy-examples.md  colony-gain-rtk-summary-view.md  colony-grab-bridge.md  colony-health-three-fixes.md  colony-package-namespace.md  colony-session-cwd-binding.md  compact-quota-safe-operating-contract.md  config-schema-directed-set.md  config.json  coordination-sweep-archive-completed-plans.md  coordination-sweep-quota-release.md  credit-auto-claim-in-ready-claim-hint.md  dedup-hook-ide-inference.md  delete-wake-default-task-message.md  docs-task-ready-for-agent-auto-claim.md  embedding-lifecycle.md  execution-safety-ok-old-telemetry.md  execution-safety-recent-fallback.md  explain-task-claim-file-rejection.md  export-import-validate.md  (+70 more)
.codex/skills/reviewer/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
apps/cli/: CHANGELOG.md  package.json  tsup.config.ts  vitest.config.ts
apps/cli/scripts/: pack-release.mjs
apps/cli/src/: auto-build.ts  bridge-adoption.ts  env.d.ts  index.ts
apps/cli/test/: agents-spawn.test.ts  auto-build.test.ts  backfill.test.ts  bin-shim.test.ts  bridge-adoption.test.ts  bridge-replay.test.ts  bridge.test.ts  cockpit.test.ts  cocoindex.test.ts  config.test.ts  coordination.test.ts  debrief.test.ts  demo.test.ts  export.test.ts  gain-drift.test.ts  gain.test.ts  gitguardex.test.ts  grab-server.test.ts  heal.test.ts  health-coach.test.ts  health-next-fixes.test.ts  health-stale-cleanup-flow.test.ts  health.test.ts  lane.test.ts  note.test.ts  observe.test.ts  plans-work.test.ts  policy-examples.test.ts  program.test.ts  queen-health.test.ts  queen.test.ts  rescue.test.ts  resolve.test.ts  resume.test.ts  scout-commands.test.ts  sidecar.test.ts  suggest.test.ts  task-ready.test.ts  version-flag.test.ts  worktree.test.ts
apps/hivemind-demo/: README.md  package.json
apps/hivemind-demo/src/: index.ts
apps/hivemind-demo/test/: orchestrator.test.ts
apps/mcp-server/: CHANGELOG.md  README.md  mcp-server  package.json
apps/mcp-server/src/: hivemind.ts  server.ts
apps/mcp-server/test/: account-claims.test.ts  attention-format.test.ts  autopilot.test.ts  bridge-status.test.ts  coordination-loop.test.ts  drift.test.ts  foraging.test.ts  heartbeat.test.ts  mcp-error-fallback.test.ts  message-descriptions.test.ts  messages.test.ts  meta.test.ts  metrics-wrapper.test.ts  plan-validate.test.ts  plan.test.ts  queen.test.ts  quota-relay-lifecycle.test.ts  (+11 more)
apps/worker/: CHANGELOG.md  package.json  worker
benchmarks/: README.md  receipts-scenarios.json
crates/colony-embedder/: Cargo.toml  README.md
crates/colony-search/: Cargo.toml
docs/: QUEEN.md  agentic-bridge.md  architecture.md  compression.md  development.md  mcp.md  proposal-task-threads.md  ruflo-sidecar.md
evals/: CHANGELOG.md  package.json
evals/src/: bench.ts
examples/: settings.example.json
examples/cocoindex/: Cargo.toml  README.md  pyproject.toml
examples/cocoindex/docs/: package.json
examples/cocoindex/docs/src/content/docs/getting_started/: ai_coding_agents.mdx  quickstart.mdx
examples/cocoindex/docs/src/content/docs/ops/: text.mdx
examples/cocoindex/docs/src/content/docs/programming_guide/: app.mdx  core_concepts.mdx
examples/cocoindex/examples/code_embedding/: main.py
examples/cocoindex/examples/code_embedding_lancedb/: main.py
examples/cocoindex/examples/conversation_to_knowledge/conv_knowledge/: app.py
examples/cocoindex/examples/csv_to_kafka/: main.py
examples/cocoindex/examples/entire_session_search/: main.py
examples/cocoindex/examples/multi_codebase_summarization/: main.py
examples/cocoindex/examples/patient_intake_extraction_baml/: main.py
examples/cocoindex/examples/pdf_embedding/: main.py
examples/cocoindex/python/cocoindex/: __init__.py  cli.py  user_app_loader.py
examples/cocoindex/python/cocoindex/_internal/: app.py  runner.py
examples/cocoindex/python/cocoindex/ops/: text.py
examples/cocoindex/rust/core/src/: lib.rs
examples/cocoindex/rust/ops_text/src/: lib.rs
examples/cocoindex/rust/py/src/: app.rs  lib.rs  runtime.rs
examples/cocoindex/rust/utils/src/: fingerprint.rs
examples/cocoindex/skills/cocoindex/references/: api_reference.md  connectors.md  setup_project.md
examples/policies/: README.md  nextjs-monorepo.json  python-package.json  rust-workspace.json
hooks-scripts/: post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
openspec/plans/: ruflo-port.md
rust/colony-bridge/: Cargo.toml  README.md
rust/colony-bridge/src/: main.rs
scripts/: bench-bridge-fastpath.mjs  benchmark-receipts.mjs  check-no-bridge-deps.sh  colony-token-analyzer.py  e2e-coordination.sh  e2e-pack-release.sh  e2e-publish.sh  publish-cli.sh
skills/archive/: SKILL.md
skills/change/: SKILL.md
skills/check/: SKILL.md
skills/colony-mcp/: SKILL.md
skills/tokens/: SKILL.md
test/: active-agents-finish-command.test.js  benchmark-receipts.test.js
tests/scenarios/: README.md
vscode/guardex-active-agents/: README.md  extension.js  package.json  session-schema.js
(+447 files in other folders)
