[workspace]
members = [
    "rust/core",
    "rust/utils",
    "rust/py",
    "rust/py_utils",
    "rust/ops_text",
]
resolver = "2"

[workspace.package]
version = "999.0.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["std"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = { version = "0.10.3", features = ["query"] }
base64 = "0.22.1"
blake2 = "0.10.6"
bytes = "1.11.0"
chrono = "0.4.42"
config = "0.15.19"
const_format = "0.2.35"
derivative = "2.2.0"
encoding_rs = "0.8.35"
env_logger = "0.11.8"
futures = "0.3.31"
globset = "0.4.18"
hashlink = "0.11"
hex = "0.4.3"
indexmap = { version = "2.12.1", features = ["serde"] }
indicatif = "0.17.11"
nix = { version = "0.30", features = ["fs", "term"] }
indoc = "2.0.7"
itertools = "0.14.0"
log = "0.4.28"
numpy = "0.27.0"
pgvector = { version = "0.4.1", features = ["sqlx", "halfvec"] }
pyo3 = { version = "0.27.1", features = ["auto-initialize", "chrono", "uuid"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
pythonize = "0.27.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rmp = { version = "0.8.14" }
rmp-serde = { version = "1.3.0" }
rpds = { version = "1.2.0" }
serde = { version = "1.0.228" }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
serde_with = { version = "3.16.0", features = ["base64"] }
storekey = { version = "0.9.0", features = ["uuid"] }
time = { version = "0.3", features = ["macros", "serde"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
    "fs",
    "sync",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicase = "2.8.1"
uuid = { version = "1.18.1", features = ["serde", "v4", "v8"] }

[profile.release]
codegen-units = 1
strip = "symbols"
lto = true
